# Spatial-Tree-Structures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Octree/: CMakeLists.txt  ContainedOctree.h  Octree.h
QuadTree/: CMakeLists.txt  ContainedQuadTree.h  QuadTree.h
